--- a/style.css
+++ b/style.css
@@ -43,7 +43,9 @@ body {
 }
 
 .link_button_large {
-    width: 150px;
+    min-width: 150px;
+    width: fit-content;
+    padding: 0 25px;
     height: 50px;
 
     margin: 5px 0px;
