fix: correct button structure in Binary Viewer and DotVS-Deleter for improved accessibility

--- a/Products/style_products.css
+++ b/Products/style_products.css
@@ -38,7 +38,7 @@ body{
 }
 
 
-#div_buttons div{
+#div_buttons .link_button_large{
     margin: 5px;
 }
 
@@ -77,7 +77,7 @@ body{
 }
 
 
-#div_download div{
+#div_download .link_button_large{
     margin: 0 auto;
 }
 
