--- a/link_button_large.css
+++ b/link_button_large.css
@@ -24,14 +24,11 @@
     transition-duration: 100ms;
 }
 
-.link_button_large a{
+.link_button_large{
     /* テキストを中央に配置 */
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
-
     text-decoration-line: none;
     color: #fff;
 }
