--- a/Products/style.css
+++ b/Products/style.css
@@ -19,7 +19,7 @@ body{
 #containers{
     margin: 8vh auto;
     min-width: fit-content;
-    max-width: 800px;
+    max-width: 100vw;
     width: 80vw;
     height: fit-content;
 }
