--- a/Products/style.css
+++ b/Products/style.css
@@ -6,7 +6,7 @@
 
 body{
     min-width: 99vw;
-    max-width: 100vh;
+    max-width: 100vw;
     margin: 0 auto;
     font-family: Arial, sans-serif;
     color: #333;
